Structure + mongoDB: ok

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-CLIENT_ID=
-TOKEN=
+CLIENT_ID=1092636192937365515
+TOKEN=MTA5MjYzNjE5MjkzNzM2NTUxNQ.G6t2v3.455-7rPfObYnUDjspwUEVewzZZdVLOsvIdUwOk
+MONGO_URI=mongodb+srv://neogetsubot:Fletnesondak4ecgotem@cluster0.nfobcft.mongodb.net/ILL-TS 
