--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.tsc",
   "scripts": {
     "start": "node dist/index.js",
+    "dev": "pm2 start dist/index.js --watch",
+    "watch:dev": "pm2 logs test --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pentiminax",
