--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2016",
-    "module": "CommonJS",                               
+    "module": "CommonJS",   
+    "typeRoots": ["node_modules/@types", "node_modules/discord.js/typings"],
+    "types": ["node"],                            
     "esModuleInterop": true,                             
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
